--- a/PM_Tool/ip/ip_BulkSend/ip_bulksend.ui
+++ b/PM_Tool/ip/ip_BulkSend/ip_bulksend.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>487</width>
-    <height>791</height>
+    <height>793</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,9 +17,9 @@
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>300</y>
+     <y>360</y>
      <width>481</width>
-     <height>341</height>
+     <height>411</height>
     </rect>
    </property>
    <property name="font">
@@ -84,7 +84,7 @@
     <property name="geometry">
      <rect>
       <x>21</x>
-      <y>151</y>
+      <y>121</y>
       <width>81</width>
       <height>41</height>
      </rect>
@@ -103,7 +103,7 @@
     <property name="geometry">
      <rect>
       <x>109</x>
-      <y>151</y>
+      <y>121</y>
       <width>131</width>
       <height>41</height>
      </rect>
@@ -121,7 +121,7 @@
     <property name="geometry">
      <rect>
       <x>290</x>
-      <y>248</y>
+      <y>200</y>
       <width>161</width>
       <height>41</height>
      </rect>
@@ -158,7 +158,7 @@
     <property name="geometry">
      <rect>
       <x>21</x>
-      <y>250</y>
+      <y>202</y>
       <width>71</width>
       <height>41</height>
      </rect>
@@ -177,7 +177,7 @@
     <property name="geometry">
      <rect>
       <x>109</x>
-      <y>248</y>
+      <y>200</y>
       <width>131</width>
       <height>41</height>
      </rect>
@@ -211,7 +211,7 @@
     <property name="geometry">
      <rect>
       <x>257</x>
-      <y>157</y>
+      <y>127</y>
       <width>81</width>
       <height>31</height>
      </rect>
@@ -230,7 +230,7 @@
     <property name="geometry">
      <rect>
       <x>350</x>
-      <y>150</y>
+      <y>120</y>
       <width>91</width>
       <height>41</height>
      </rect>
@@ -294,6 +294,132 @@
      <number>10</number>
     </property>
    </widget>
+   <widget class="QLabel" name="label_18">
+    <property name="geometry">
+     <rect>
+      <x>262</x>
+      <y>290</y>
+      <width>81</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>微软雅黑</family>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>失败个数:</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="TsuccessNum">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>102</x>
+      <y>280</y>
+      <width>101</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="maximum">
+     <number>100000</number>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="TsuccessTime">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>102</x>
+      <y>343</y>
+      <width>101</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="prefix">
+     <string/>
+    </property>
+    <property name="suffix">
+     <string> 秒</string>
+    </property>
+    <property name="decimals">
+     <number>3</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_19">
+    <property name="geometry">
+     <rect>
+      <x>22</x>
+      <y>290</y>
+      <width>81</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>微软雅黑</family>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>发送个数:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_20">
+    <property name="geometry">
+     <rect>
+      <x>22</x>
+      <y>353</y>
+      <width>81</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>微软雅黑</family>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>完成时间:</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="TErNum">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>352</x>
+      <y>280</y>
+      <width>101</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="maximum">
+     <number>100000</number>
+    </property>
+   </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_2">
    <property name="geometry">
@@ -301,7 +427,7 @@
      <x>0</x>
      <y>0</y>
      <width>481</width>
-     <height>291</height>
+     <height>351</height>
     </rect>
    </property>
    <property name="font">
@@ -316,7 +442,7 @@
     <property name="geometry">
      <rect>
       <x>109</x>
-      <y>49</y>
+      <y>29</y>
       <width>131</width>
       <height>41</height>
      </rect>
@@ -344,7 +470,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>49</y>
+      <y>29</y>
       <width>101</width>
       <height>41</height>
      </rect>
@@ -363,7 +489,7 @@
     <property name="geometry">
      <rect>
       <x>349</x>
-      <y>130</y>
+      <y>90</y>
       <width>101</width>
       <height>41</height>
      </rect>
@@ -394,7 +520,7 @@
     <property name="geometry">
      <rect>
       <x>21</x>
-      <y>131</y>
+      <y>91</y>
       <width>81</width>
       <height>41</height>
      </rect>
@@ -413,7 +539,7 @@
     <property name="geometry">
      <rect>
       <x>109</x>
-      <y>209</y>
+      <y>156</y>
       <width>131</width>
       <height>41</height>
      </rect>
@@ -447,7 +573,7 @@
     <property name="geometry">
      <rect>
       <x>109</x>
-      <y>131</y>
+      <y>91</y>
       <width>131</width>
       <height>41</height>
      </rect>
@@ -465,7 +591,7 @@
     <property name="geometry">
      <rect>
       <x>262</x>
-      <y>136</y>
+      <y>96</y>
       <width>81</width>
       <height>31</height>
      </rect>
@@ -484,7 +610,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>216</y>
+      <y>163</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -503,7 +629,7 @@
     <property name="geometry">
      <rect>
       <x>270</x>
-      <y>49</y>
+      <y>29</y>
       <width>71</width>
       <height>41</height>
      </rect>
@@ -522,7 +648,7 @@
     <property name="geometry">
      <rect>
       <x>290</x>
-      <y>213</y>
+      <y>156</y>
       <width>161</width>
       <height>41</height>
      </rect>
@@ -540,7 +666,7 @@
     <property name="geometry">
      <rect>
       <x>349</x>
-      <y>50</y>
+      <y>30</y>
       <width>101</width>
       <height>41</height>
      </rect>
@@ -571,6 +697,132 @@
     </property>
     <property name="displayIntegerBase">
      <number>10</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_15">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>238</y>
+      <width>81</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>微软雅黑</family>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>发送个数:</string>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="SsuccessTime">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>291</y>
+      <width>101</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="prefix">
+     <string/>
+    </property>
+    <property name="suffix">
+     <string> 秒</string>
+    </property>
+    <property name="decimals">
+     <number>3</number>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="SsuccessNum">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>228</y>
+      <width>101</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="maximum">
+     <number>100000</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_16">
+    <property name="geometry">
+     <rect>
+      <x>270</x>
+      <y>238</y>
+      <width>81</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>微软雅黑</family>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>失败个数:</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="SErNum">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>360</x>
+      <y>228</y>
+      <width>101</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="maximum">
+     <number>100000</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_17">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>301</y>
+      <width>81</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>微软雅黑</family>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>完成时间:</string>
     </property>
    </widget>
   </widget>
