--- a/PM_Tool/mpro/mp_bulksend/mp_bulksend.ui
+++ b/PM_Tool/mpro/mp_bulksend/mp_bulksend.ui
@@ -19,7 +19,7 @@
      <x>0</x>
      <y>0</y>
      <width>481</width>
-     <height>331</height>
+     <height>381</height>
     </rect>
    </property>
    <property name="font">
@@ -65,7 +65,7 @@
     <property name="geometry">
      <rect>
       <x>346</x>
-      <y>130</y>
+      <y>100</y>
       <width>91</width>
       <height>41</height>
      </rect>
@@ -118,7 +118,7 @@
     <property name="geometry">
      <rect>
       <x>265</x>
-      <y>134</y>
+      <y>104</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -156,7 +156,7 @@
     <property name="geometry">
      <rect>
       <x>274</x>
-      <y>224</y>
+      <y>171</y>
       <width>161</width>
       <height>41</height>
      </rect>
@@ -211,7 +211,7 @@
     <property name="geometry">
      <rect>
       <x>38</x>
-      <y>140</y>
+      <y>110</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -230,7 +230,7 @@
     <property name="geometry">
      <rect>
       <x>120</x>
-      <y>134</y>
+      <y>104</y>
       <width>101</width>
       <height>41</height>
      </rect>
@@ -273,7 +273,7 @@
     <property name="geometry">
      <rect>
       <x>21</x>
-      <y>229</y>
+      <y>176</y>
       <width>91</width>
       <height>31</height>
      </rect>
@@ -292,7 +292,7 @@
     <property name="geometry">
      <rect>
       <x>120</x>
-      <y>224</y>
+      <y>171</y>
       <width>101</width>
       <height>41</height>
      </rect>
@@ -331,14 +331,140 @@
      <number>10</number>
     </property>
    </widget>
+   <widget class="QLabel" name="label_18">
+    <property name="geometry">
+     <rect>
+      <x>271</x>
+      <y>260</y>
+      <width>81</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>微软雅黑</family>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>失败个数:</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="MproNum">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>118</x>
+      <y>250</y>
+      <width>101</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="maximum">
+     <number>100000</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_19">
+    <property name="geometry">
+     <rect>
+      <x>38</x>
+      <y>260</y>
+      <width>81</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>微软雅黑</family>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>发送个数:</string>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="MproTime">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>118</x>
+      <y>313</y>
+      <width>101</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="prefix">
+     <string/>
+    </property>
+    <property name="suffix">
+     <string> 秒</string>
+    </property>
+    <property name="decimals">
+     <number>3</number>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="MproErNum">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>361</x>
+      <y>250</y>
+      <width>101</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="maximum">
+     <number>100000</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_20">
+    <property name="geometry">
+     <rect>
+      <x>38</x>
+      <y>323</y>
+      <width>81</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>微软雅黑</family>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>完成时间:</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>334</y>
+     <y>390</y>
      <width>471</width>
-     <height>351</height>
+     <height>381</height>
     </rect>
    </property>
    <property name="font">
@@ -353,7 +479,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>40</y>
+      <y>45</y>
       <width>131</width>
       <height>41</height>
      </rect>
@@ -372,7 +498,7 @@
     <property name="geometry">
      <rect>
       <x>139</x>
-      <y>37</y>
+      <y>42</y>
       <width>121</width>
       <height>41</height>
      </rect>
@@ -390,7 +516,7 @@
     <property name="geometry">
      <rect>
       <x>310</x>
-      <y>40</y>
+      <y>45</y>
       <width>61</width>
       <height>31</height>
      </rect>
@@ -409,7 +535,7 @@
     <property name="geometry">
      <rect>
       <x>373</x>
-      <y>35</y>
+      <y>40</y>
       <width>81</width>
       <height>41</height>
      </rect>
@@ -424,7 +550,7 @@
      <number>1</number>
     </property>
     <property name="maximum">
-     <number>500</number>
+     <number>1000</number>
     </property>
     <property name="singleStep">
      <number>10</number>
@@ -440,7 +566,7 @@
     <property name="geometry">
      <rect>
       <x>373</x>
-      <y>110</y>
+      <y>130</y>
       <width>81</width>
       <height>41</height>
      </rect>
@@ -455,7 +581,7 @@
      <number>1</number>
     </property>
     <property name="maximum">
-     <number>500</number>
+     <number>1000</number>
     </property>
     <property name="singleStep">
      <number>10</number>
@@ -471,7 +597,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>116</y>
+      <y>136</y>
       <width>131</width>
       <height>41</height>
      </rect>
@@ -490,7 +616,7 @@
     <property name="geometry">
      <rect>
       <x>139</x>
-      <y>113</y>
+      <y>133</y>
       <width>121</width>
       <height>41</height>
      </rect>
@@ -508,7 +634,7 @@
     <property name="geometry">
      <rect>
       <x>310</x>
-      <y>115</y>
+      <y>135</y>
       <width>51</width>
       <height>31</height>
      </rect>
@@ -527,7 +653,7 @@
     <property name="geometry">
      <rect>
       <x>373</x>
-      <y>180</y>
+      <y>210</y>
       <width>81</width>
       <height>41</height>
      </rect>
@@ -542,7 +668,7 @@
      <number>1</number>
     </property>
     <property name="maximum">
-     <number>500</number>
+     <number>1000</number>
     </property>
     <property name="singleStep">
      <number>10</number>
@@ -558,7 +684,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>187</y>
+      <y>217</y>
       <width>131</width>
       <height>41</height>
      </rect>
@@ -577,7 +703,7 @@
     <property name="geometry">
      <rect>
       <x>139</x>
-      <y>184</y>
+      <y>214</y>
       <width>121</width>
       <height>41</height>
      </rect>
@@ -595,7 +721,7 @@
     <property name="geometry">
      <rect>
       <x>310</x>
-      <y>187</y>
+      <y>217</y>
       <width>51</width>
       <height>31</height>
      </rect>
@@ -614,7 +740,7 @@
     <property name="geometry">
      <rect>
       <x>373</x>
-      <y>255</y>
+      <y>290</y>
       <width>81</width>
       <height>41</height>
      </rect>
@@ -629,7 +755,7 @@
      <number>1</number>
     </property>
     <property name="maximum">
-     <number>500</number>
+     <number>1000</number>
     </property>
     <property name="singleStep">
      <number>10</number>
@@ -645,7 +771,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>260</y>
+      <y>295</y>
       <width>131</width>
       <height>41</height>
      </rect>
@@ -664,7 +790,7 @@
     <property name="geometry">
      <rect>
       <x>139</x>
-      <y>257</y>
+      <y>292</y>
       <width>121</width>
       <height>41</height>
      </rect>
@@ -682,7 +808,7 @@
     <property name="geometry">
      <rect>
       <x>310</x>
-      <y>260</y>
+      <y>295</y>
       <width>41</width>
       <height>31</height>
      </rect>
